feat: adds menu options

--- a/external/pdfjs-2.1.266-dist/web/viewer.css
+++ b/external/pdfjs-2.1.266-dist/web/viewer.css
@@ -24,6 +24,10 @@
   line-height: 1.0;
 }
 
+.toolbarViewerRight {
+  opacity: 0;
+}
+
 .textLayer > span {
   color: transparent;
   position: absolute;
