--- a/external/pdfjs-2.1.266-dist/web/viewer.css
+++ b/external/pdfjs-2.1.266-dist/web/viewer.css
@@ -411,7 +411,7 @@ html {
 body {
   height: 100%;
   width: 100%;
-  background-color: #404040;
+  background-color: #fff;
   background-image: url(images/texture.png);
 }
 
