--- a/external/pdfjs-2.1.266-dist/web/viewer.css
+++ b/external/pdfjs-2.1.266-dist/web/viewer.css
@@ -1038,8 +1038,7 @@ html[dir='rtl'] .splitToolbarButton > .toolbarButton {
 html[dir='ltr'] .splitToolbarButton > .toolbarButton:first-child,
 html[dir='rtl'] .splitToolbarButton > .toolbarButton:last-child {
   position: relative;
-  margin: 0;
-  margin-right: -1px;
+  margin: 0 -1px 0 0;
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
   border-right-color: transparent;
@@ -1047,8 +1046,7 @@ html[dir='rtl'] .splitToolbarButton > .toolbarButton:last-child {
 html[dir='ltr'] .splitToolbarButton > .toolbarButton:last-child,
 html[dir='rtl'] .splitToolbarButton > .toolbarButton:first-child {
   position: relative;
-  margin: 0;
-  margin-left: -1px;
+  margin: 0 0 0 -1px;
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
   border-left-color: transparent;
